<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConverter"
    android:background="@drawable/background_arriba_derecha">

    <TextView
        android:id="@+id/txt_tittle_app"
        android:layout_width="225dp"
        android:layout_height="110dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/Science_Blue"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_money_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_txt_money_converter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tittle_app" />

    <EditText
        android:id="@+id/editTextDollarConver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/app_hint_editText_number_dollar"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_money_convert" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/Caribbean_Green"
        android:text="@string/app_btn_convert"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDollarConver" />

    <TextView
        android:id="@+id/txt_money_converter_result"
        android:layout_width="413dp"
        android:layout_height="125dp"
        android:layout_marginTop="52dp"
        android:text="@string/app_txt_money_converter_result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert"
        app:layout_constraintVertical_bias="0.416" />

</androidx.constraintlayout.widget.ConstraintLayout>