<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_medio"
    tools:context=".ChangeValueEuro">

    <TextView
        android:id="@+id/txt_tittle_change_value_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/app_txt_change_euro_value"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_change_value_euro"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="480dp"
        android:ems="10"
        android:hint="@string/app_hint_editText_number_euro"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_change_value_euro"
        android:layout_width="184dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/Science_Blue"
        android:text="@string/app_button_change_euro_value"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_change_value_euro" />

    <TextView
        android:id="@+id/txt_actuality_value_euro"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="212dp"
        android:text="@string/app_txt_actuality_euro_value"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_change_value_euro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tittle_change_value_euro"
        app:layout_constraintVertical_bias="0.516" />

</androidx.constraintlayout.widget.ConstraintLayout>